# Smokescreen

./: .buildinfo  .flake8  .gitignore  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  bckp_README.md  codecov.yml  condaenv.m_d6hye2.requirements.txt  environment.yml  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  reference.html  search.html  searchindex.js  usage.html
.doctrees/: environment.pickle  index.doctree  installation.doctree  reference.doctree  usage.doctree
.github/workflows/: CI.yml  build_docs.yml  draft-pdf.yml
_sources/: index.rst.txt  installation.rst.txt  reference.rst.txt  usage.rst.txt
doc/desc-0000-blinding-cx8-strategies/: .gitignore  .metadata.json  .travis.yml  Makefile  README.md  authors.csv  main.ipynb  main.md  main.rst  main.tex
docs/: requirements.txt
docs/source/: conf.py  index.rst  reference.rst  usage.rst
docs/source/_static/: custom.js
examples/: README.md
examples/cosmic_shear/: blind_cosmic_shear_example.yaml  cosmicshear_likelihood.py  cosmicshear_sacc.fits  cosmicshear_sacc.hdf5  cosmicshear_sacc_concealed_data_vector.fits  cosmicshear_sacc_concealed_data_vector.h5
examples/lsst_3x2pt/: 3x2pt_likelihood.py  conceal_lsst_y1_3x2pt_blind_A.yaml  conceal_lsst_y1_3x2pt_blind_B.yaml
examples/lsst_3x2pt/cosmosis_ini_files/: cosmosis_lsst_3x2pt.ini  cosmosis_lsst_3x2pt_blindA.ini  cosmosis_lsst_3x2pt_blindB.ini  cosmosis_priors.ini  cosmosis_values.ini
examples/supernovae/: blind_sn_example.yaml  sn_datavector_concealed_data_vector.fits  sn_likelihood.py
legacy_blinding/: README.md  pyproject.toml
legacy_blinding/blind_2pt_cosmosis/: __init__.py  __main__.py  default_blinding_template.ini  io.py  param_shifts.py  run_cosmosis_2pt.py  twopt_utils.py
legacy_blinding/blind_2pt_cosmosis/cosmosis_files/: blinding_values_template.ini  default_blinding_template.ini  params.ini
legacy_blinding/blind_2pt_cosmosis/cosmosis_files/data_vectors/: sim_fiducial.fits
legacy_blinding/blind_2pt_cosmosis/cosmosis_ini_files/: blinding_values_template.ini  default_blinding_template.ini  params.ini
legacy_blinding/blind_2pt_cosmosis/tests/: test_io.py  test_param_shifts.py  test_twopt_utils.py
legacy_blinding/src/blind_2pt_cosmosis/: __init__.py  __main__.py  _version.py  io.py  param_shifts.py  twopt_utils.py
legacy_blinding/src/blind_2pt_cosmosis/cosmosis_files/: default_blinding_template.ini  params.ini  values.ini
legacy_blinding/tests/: test_io.py  test_param_shifts.py  test_twopt_utils.py
notebooks/: prototyping_firecrown_theory.ipynb  test_blinding_prototype.ipynb  test_cosmicshear_example.ipynb  test_supernova_example.ipynb
paper/: README.md  paper.bib  paper.md
src/blinding/: __init__.py  __main__.py  param_shifts.py  smokescreen.py  utils.py
src/smokescreen/: __init__.py  __main__.py  _version.py  datavector.py  encryption.py  param_shifts.py  smokescreen.py  utils.py
tests/: test_datavector.py  test_encryption.py  test_main.py  test_param_shifts.py  test_smokescreen.py  test_utils.py
tests/test_data/: mock_likelihood.py
