[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blinding"
description = "DESC Blinding Unified Library. Based on the Muir et al. (2021) blinding method."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
maintainers = [
    {name = "Arthur Loureiro", email = "arthur.loureiro@fysik.su.se"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved ::  BSD-3-Clause license",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.9.0",
    "astropy>=5.2.0",
    "pytest>=7.2.5",
    "argparse>=1.0",
    "sacc>=0.12",
    "pyccl>=3.0.2",
    "jsonargparse[signatures]>=4.0",
    "pytest",
    "pytest-cov",
]
keywords = ["desc", "python", "blinding", "firecrown", "cosmology"]
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["src"]
