[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "Smokescreen"
description = "Smokescreen: DESC Blinding Unified Library. Based on the Muir et al. (2021) data-vector blinding method."
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
maintainers = [
    {name = "Arthur Loureiro", email = "arthur.loureiro@fysik.su.se"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=2.2.0",
    "scipy>=1.9.0",
    "astropy>=5.2.0",
    "pytest>=7.2.5",
    "sacc>=0.12",
    #"pyccl>=3.0.2",
    "jsonargparse[signatures]>=4.0",
    "pytest",
    "pytest-cov",
    "cryptography"
]
keywords = ["desc", "python", "blinding", "firecrown", "cosmology"]
dynamic = ["version"]

[project.optional-dependencies]
docs = [
    "sphinx>=7.3.0",
    "sphinxcontrib.datatemplates",
    "sphinxcontrib-autoprogram",
    "sphinx_rtd_theme",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.flake8]
max-line-length = 120

[project.urls]
Homepage = "https://github.com/LSSTDESC/Smokescreen"
Issues = "https://github.com/LSSTDESC/Smokescreen/issues"

# [tool.hatch]
# version.source = "vcs"

[tool.hatch.version]
path = "src/smokescreen/_version.py"

[project.scripts]
smokescreen = "smokescreen.__main__:main"